force-app/main/default/objects/SETCARD__c/SETCARD__c.object-meta.xml
<CustomObject>
    <label>SETCARD</label>
    <nameField>
        <label>Card No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SETCARD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>