force-app/main/default/objects/SETCARD__c/fields/Aktif__c.field-meta.xml
<CustomField>
    <fullName>Aktif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aktif</label>
    <type>Checkbox</type>
</CustomField>