force-app/main/default/objects/SETCARD__c/fields/Kart_Bakiye__c.field-meta.xml
<CustomField>
    <fullName>Kart_Bakiye__c</fullName>
    <label>Kart Bakiye</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>