force-app/main/default/objects/SETCARD__c/fields/Kart_Iade_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Kart_Iade_Tarihi__c</fullName>
    <label>Kart Iade Tarihi</label>
    <type>Date</type>
</CustomField>