force-app/main/default/objects/SETCARD__c/fields/Kart_Verilme_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Kart_Verilme_Tarihi__c</fullName>
    <label>Kart Verilme Tarihi</label>
    <type>Date</type>
</CustomField>