force-app/main/default/objects/SETCARD__c/fields/Personel__c.field-meta.xml
<CustomField>
    <fullName>Personel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personel</label>
    <referenceTo>Personel__c</referenceTo>
    <relationshipLabel>SETCARD</relationshipLabel>
    <relationshipName>SETCARD</relationshipName>
    <type>Lookup</type>
</CustomField>