force-app/main/default/objects/SETCARD__c/listViews/Aktif_SetCard.listView-meta.xml
<ListView>
    <fullName>Aktif_SetCard</fullName>
    <columns>Personel__c</columns>
    <columns>NAME</columns>
    <columns>Aktif__c</columns>
    <columns>Kart_Verilme_Tarihi__c</columns>
    <columns>Kart_Iade_Tarihi__c</columns>
    <columns>Kart_Bakiye__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Aktif__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aktif SetCard</label>
</ListView>