force-app/main/default/objects/SETCARD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Personel__c</columns>
    <columns>NAME</columns>
    <columns>Aktif__c</columns>
    <columns>Kart_Verilme_Tarihi__c</columns>
    <columns>Kart_Iade_Tarihi__c</columns>
    <columns>Kart_Bakiye__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>